syntax = "proto3";

service Service {
  rpc Fetch (FetchRequest) returns (Book);
  rpc Add (Book) returns (Empty);
  rpc ListAll (Empty) returns (ListAllResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (Empty);
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn13 = 4;
  bool state = 5;
  string pic = 6;
}

message Listup {
  string id = 1;
  string title = 2;
}

message Empty {

}

message FetchRequest {
  string id = 1;
}

message ListAllResponse {
  repeated Listup books = 1;
}

message UpdateRequest {
  Book book = 1;
}

message UpdateResponse {
  Book book = 1;
}

message DeleteRequest {
  string id = 1;
}

